<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>atomicengine_launch</name>
    <version>0.1.0</version>
    <description>The atomicengine launch package</description>

    <maintainer email="support@map4.jp">MapIV Inc.</maintainer>
    <license>Private</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
